# kernel_density

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: ci-cachix.yml  ci.yml
dat/: kde_normal_0_1_epanechnikov_0.1.tsv  kde_normal_0_1_epanechnikov_0.25.tsv  kde_normal_0_1_epanechnikov_0.5.tsv  kde_normal_0_1_normal_0.1.tsv  kde_normal_0_1_normal_0.25.tsv  kde_normal_0_1_normal_0.5.tsv  kde_normal_0_1_uniform_0.1.tsv  kde_normal_0_1_uniform_0.25.tsv  kde_normal_0_1_uniform_0.5.tsv
src/: ecdf.rs  kolmogorov_smirnov.rs  lib.rs
src/density/: ecdf.rs  mod.rs  normal.rs
src/kde/: epanechnikov.rs  mod.rs  normal.rs  uniform.rs
src/kolmogorov_smirnov/: mod.rs
tests/: density_normal.rs  ecdf.rs  epanechnikov.rs  kde_epanechnikov.rs  kde_normal.rs  kde_uniform.rs  kolmogorov_smirnov.rs  normal.rs  uniform.rs
tests/common/: mod.rs
