[package]
name = "kernel_density"
description = "Implementation of kernel density estimation as a Rust library."
version = "0.0.3"
homepage = "https://github.com/daithiocrualaoich/kernel_density"
repository = "https://github.com/daithiocrualaoich/kernel_density"
authors = ["Daithi O Crualaoich <daithi.ocrualaoich@gmail.com>"]
license = "Apache-2.0"
keywords = ["statistics"]
exclude = [
  ".dockerignore",
  ".editorconfig",
  ".gitignore",
  ".travis.yml",
  "Dockerfile",
  "dat/*",
  "doc/*",
]

[[bin]]
name = "normal"

[[bin]]
name = "normal_density"

[[bin]]
name = "epanechnikov_kde"

[[bin]]
name = "normal_kde"

[[bin]]
name = "uniform_kde"

[[bin]]
name = "ks_critical_values"

[[bin]]
name = "ks_test"

[dependencies]
rand = "0.4"
# rand_distr = "0.4.3"

[dev-dependencies]
quickcheck = "0.6"
